# advent-of-code-haskell

./: LICENSE  README.md  advent-of-code-haskell.cabal
src/: Main.hs
src/Year_2015/: Puzzle1.hs  Puzzle2.hs  Puzzle3.hs
src/Year_2016/: Puzzle1.hs  Puzzle2.hs
test/Year_2015/: Puzzle1Spec.hs  Puzzle2Spec.hs  Puzzle3Spec.hs
test/Year_2016/: Puzzle1Spec.hs  Puzzle2Spec.hs
